release: 1.0.0-RC.1 (#589)
* build: Removed duplicated build and profiles in modules pom.xml

* ci: spotless:apply and wordlist.txt update

* build: Removed jreleaser from maven

* build: Fixed jreleaser config

* build: Added `out` to .gitignore

* build: Disable maven publishing for parent and tests

* ci: wordlist.txt update

* test: add -parameters to ./tests maven compiler plugin

* release: 1.0.0-RC.1

---------

Co-authored-by: Brian Sam-Bodden <bsb@redis.com>